Thu Feb  2 21:23:00 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

 - upsdrvctl:
   * Added 'status' command
   * Drivers read the port from 'ups.conf' directly, so including the
     port has been unneccessary for quite a while already (removed now)

Wed Feb  1 10:32:30 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - newhidups: fixed battery manufacturing date conversion for APC
   Back-UPS 500 and Back-UPS ES/CyberFort 500.

Tue Jan 31 21:34:00 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

 - Safenet driver:
   * put all UPS commands in header file (for easy retrieval)
   * remove log errors when instant commands can't be handled
     (doesn't work reliably on at least one flavor of this UPS
     and wasn't very useful anyway)

Mon Jan 30 19:52:00 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

 -  Fixes bug #302338 (genericups: custom configuration through ups.conf
    not working)

Sat Jan 28 14:38:58 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

 - Fix bug with upsd declaring driver stale when the system resumes
   after suspend-to-disk
 - Improve readability of the code by removing non-functional call to
   subroutine update_time and moving decision whether or not a ping
   must be sent to the driver to the routine calling it

Fri Jan 27 17:15:00 UTC 2006 / Kjell Claesson <kjell.claesson@telia.com>

 - Update to snmp.
 - Comment from Niklas
   Updates the following in snmp-ups:
   * Added more OID:s to apccmib (battery.current and more), tried to
      group the values better in the table to get overview.
   * Added support for the notion that negative values means that it's
      not supported (used by apccmib).
   * Added support to disable the "competition" for some variables, handy
      when there are multiple OID:s supplying the same value depending on
      how fancy your UPS SNMP support is (used by apccmib).

Fri Jan 27 15:01:20 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>
